--- a/app/src/main/res/drawable/listview_selected.xml
+++ b/app/src/main/res/drawable/listview_selected.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Selector style for listView row -->
     <item android:state_selected="false" android:drawable="@android:color/transparent" />
-    <item android:state_selected="true" android:drawable="@color/colorPrimaryAlpha" />
+    <item android:state_selected="true" android:drawable="@color/colorPrimary" />
     <item android:state_activated="true" android:drawable="@color/colorPrimaryAlpha" />
     <item android:state_pressed="true" android:drawable="@color/colorPrimaryAlpha" />
     <item android:state_pressed="false" android:drawable="@android:color/transparent" />
